Optimized match adding.

--- a/Course-Industry Matching.ipynb
+++ b/Course-Industry Matching.ipynb
@@ -12,8 +12,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.67 ms, sys: 0 ns, total: 6.67 ms\n",
-      "Wall time: 10.6 ms\n"
+      "CPU times: user 12 ms, sys: 4 ms, total: 16 ms\n",
+      "Wall time: 11 ms\n"
      ]
     }
    ],
@@ -37,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.5 s, sys: 487 ms, total: 11 s\n",
-      "Wall time: 10.4 s\n"
+      "CPU times: user 13.1 s, sys: 96 ms, total: 13.2 s\n",
+      "Wall time: 13.1 s\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -64,8 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.52 s, sys: 700 ms, total: 4.22 s\n",
-      "Wall time: 3.56 s\n"
+      "CPU times: user 60 ms, sys: 24 ms, total: 84 ms\n",
+      "Wall time: 68.4 ms\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -102,7 +102,7 @@
        " 'ARCHITECTURAL']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +133,7 @@
        " 'BUILDING']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -161,10 +161,10 @@
        " 'DESIGN',\n",
        " 'DEVELOPMENT',\n",
        " 'DISTRIBUTION',\n",
-       " 'ENGINEERING']"
+       " 'EDUCATION']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -185,8 +185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 290 ms, sys: 73.3 ms, total: 363 ms\n",
-      "Wall time: 376 ms\n"
+      "CPU times: user 36 ms, sys: 8 ms, total: 44 ms\n",
+      "Wall time: 40.4 ms\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -246,123 +246,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LINGUISTICS</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.111282</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.111282</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.020568</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.045183</td>\n",
-       "      <td>0.042346</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.020568</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.045183</td>\n",
+       "      <td> 0.042346</td>\n",
+       "      <td> 0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>STUDIES</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HARDWARE</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 1</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HOSPITALITY</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 1</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.108406</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0.108406</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ELEMENTARY</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.112116</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td> 0.112116</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0.000000</td>\n",
+       "      <td> 0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -401,7 +401,7 @@
        "[5 rows x 146 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -422,8 +422,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 117 ms, sys: 3.33 ms, total: 120 ms\n",
-      "Wall time: 119 ms\n"
+      "CPU times: user 16 ms, sys: 0 ns, total: 16 ms\n",
+      "Wall time: 13.6 ms\n"
      ]
     }
    ],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -456,8 +456,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 263 ms, sys: 0 ns, total: 263 ms\n",
-      "Wall time: 263 ms\n"
+      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
+      "Wall time: 2.07 ms\n"
      ]
     }
    ],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -495,27 +495,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 3.33 ms, total: 3.33 ms\n",
-      "Wall time: 1.86 ms\n"
+      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
+      "Wall time: 1.38 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
+       "ACCOUNTING      3.000000\n",
+       "ACCOUNTANCY     1.778375\n",
        "BUSINESS        1.000000\n",
-       "ACCOUNTING      1.000000\n",
        "AGRIBUSINESS    0.751409\n",
-       "ACCOUNTANCY     0.592792\n",
-       "WRITING         0.164709\n",
-       "DRAFTING        0.140500\n",
-       "MARKETING       0.128460\n",
-       "NURSING         0.111017\n",
-       "ADVERTISING     0.077272\n",
+       "NURSING         0.081877\n",
        "MARINE          0.072866\n",
+       "ENGINEER        0.060532\n",
+       "MEDICINE        0.059967\n",
+       "ADVERTISING     0.056990\n",
+       "ENGINEERING     0.049126\n",
        "Name: BUSINESS, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -542,23 +542,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.33 ms, sys: 0 ns, total: 3.33 ms\n",
-      "Wall time: 2.87 ms\n"
+      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
+      "Wall time: 1.96 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "RESEARCH       0.903873\n",
-       "INFORMATION    0.608181\n",
-       "TECHNOLOGY     0.446791\n",
-       "CONSULTING     0.401750\n",
-       "CONSULTANCY    0.360313\n",
-       "EDUCATION      0.247390\n",
+       "RESEARCH       2.711620\n",
+       "INFORMATION    1.438259\n",
+       "TECHNOLOGY     1.340372\n",
+       "CONSULTING     1.205249\n",
+       "CONSULTANCY    1.080940\n",
+       "AGENCY         0.115105\n",
        "Name: SCIENCE, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -581,8 +581,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20 ms, sys: 0 ns, total: 20 ms\n",
-      "Wall time: 21.8 ms\n"
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 2.27 ms\n"
      ]
     }
    ],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -607,7 +607,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 575 µs\n"
+      "Wall time: 849 µs\n"
      ]
     }
    ],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -631,15 +631,15 @@
     {
      "data": {
       "text/plain": [
-       "RESEARCH       55.490816\n",
-       "MEDICAL         5.642393\n",
-       "ELECTRICAL      5.304976\n",
-       "ELECTRONICS     4.927573\n",
-       "FINANCE         4.836570\n",
+       "RESEARCH       77.086372\n",
+       "MEDICAL         8.036202\n",
+       "ELECTRICAL      6.153122\n",
+       "ELECTRONICS     3.276949\n",
+       "CALLCENTER      2.002045\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -661,17 +661,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 33.3 ms, sys: 0 ns, total: 33.3 ms\n",
-      "Wall time: 30.3 ms\n"
+      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
+      "Wall time: 4.15 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "56.114405174341321"
+       "1.1956868252289226"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -697,8 +697,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 60 ms, sys: 6.67 ms, total: 66.7 ms\n",
-      "Wall time: 65.6 ms\n"
+      "CPU times: user 40 ms, sys: 0 ns, total: 40 ms\n",
+      "Wall time: 39.6 ms\n"
      ]
     }
    ],
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -722,10 +722,10 @@
     {
      "data": {
       "text/plain": [
-       "0.18857590225410248"
+       "0.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -744,10 +744,10 @@
     {
      "data": {
       "text/plain": [
-       "2.0426738449004134"
+       "0.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -766,10 +766,10 @@
     {
      "data": {
       "text/plain": [
-       "37.848446661970648"
+       "0.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -801,10 +801,10 @@
     {
      "data": {
       "text/plain": [
-       "69.028661985060353"
+       "1.5123227260112406"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
