Added profile cleaning.

--- a/Job Industry Intelligence.ipynb
+++ b/Job Industry Intelligence.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "code",
    "execution_count": 244,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 260,
    "metadata": {
     "collapsed": false
    },
@@ -1774,7 +1774,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Java Developer (4)\n"
+      "Property Specialist (5)\n"
      ]
     }
    ],
@@ -1802,43 +1802,6 @@
     "# container.children = [industry_widget, job_widget]\n",
     "# display(container)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['CUSTOMER SERVICE',\n",
-       " 'FINANCE & ACCOUNTING',\n",
-       " 'INFORMATION TECHNOLOGY & SOFTWARE',\n",
-       " 'SALE',\n",
-       " 'ENGINEERING',\n",
-       " 'MARKETING',\n",
-       " 'OPERATION & MANAGEMENT',\n",
-       " 'HUMAN RESOURCE',\n",
-       " 'DATA ENTRY & ADMIN',\n",
-       " 'PUBLIC SERVICE',\n",
-       " 'BUSINESS DEVELOPMENT',\n",
-       " 'DESIGN & MEDIUM',\n",
-       " 'BUSINESS PROCESS OUTSOURCING',\n",
-       " 'EDUCATION',\n",
-       " 'WRITING & CONTENT',\n",
-       " 'CONSTRUCTION',\n",
-       " 'COMPUTER SOFTWARE / ENGINEERING',\n",
-       " 'EDUCATION']"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
