Added company intelligence and edited job-based intelligence.

--- a/User Job Title Intelligence.ipynb
+++ b/User Job Title Intelligence.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: pylab import has clobbered these variables: ['style']\n",
+      "WARNING: pylab import has clobbered these variables: ['style', 'split', 'flatten']\n",
       "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
