Updated company intelligence.

--- a/Company Intelligence.ipynb
+++ b/Company Intelligence.ipynb
@@ -48,33 +48,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "job_post_data = session.query(Job).filter(~Job.is_test).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "job_post_data = session.query(Job, Company).filter(\n",
+    "company_job_data = session.query(Company.name, Job.name).filter(\n",
     "    ~Job.is_test,\n",
     "    ~Company.is_test,\n",
     "    Job.company_id == Company.id,\n",
+    "    Job.active\n",
     ").all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# clean pairs\n",
+    "company_job_data = map(lambda (company, job): (company.title(), job.title()), company_job_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -82,9 +84,7 @@
    "source": [
     "unique_company_job_posts = defaultdict(set)\n",
     "\n",
-    "for entry in job_post_data:\n",
-    "    company = entry.Company.name.title()\n",
-    "    job = entry.Job.name.title()\n",
+    "for company, job in company_job_data:\n",
     "    unique_company_job_posts[company].add(job)\n",
     "\n",
     "unique_company_job_posts = {company: len(jobs) for company, jobs in unique_company_job_posts.items()}"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -103,22 +103,67 @@
        "[(u'Vxi Global Holding B.V.', 312),\n",
        " (u'Teleperformance Philippines', 256),\n",
        " (u'Department Of Finance - Blgf', 190),\n",
-       " (u'Kalibrr', 59),\n",
-       " (u'San Miguel Corporation', 53),\n",
        " (u'Bureau Of Internal Revenue', 49),\n",
-       " (u'Department Of Finance', 38),\n",
+       " (u'San Miguel Corporation', 44),\n",
+       " (u'Department Of Finance', 37),\n",
        " (u'De La Salle Health Sciences Institute', 35),\n",
        " (u'Linxprovi8', 33),\n",
-       " (u'Collarfinder Management Consultancy Inc.', 32)]"
+       " (u'Collarfinder Management Consultancy Inc.', 32),\n",
+       " (u'Department Of Transportation And Communications - Npmo', 31)]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sorted(unique_company_job_posts.items(), key=lambda (key, value): value, reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "non_unique_company_job_posts = defaultdict(int)\n",
+    "\n",
+    "for company, job in company_job_data:\n",
+    "    non_unique_company_job_posts[company] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'Bureau Of Internal Revenue', 3213),\n",
+       " (u'Vxi Global Holding B.V.', 334),\n",
+       " (u'Teleperformance Philippines', 269),\n",
+       " (u'Department Of Finance - Blgf', 198),\n",
+       " (u'San Miguel Corporation', 44),\n",
+       " (u'De La Salle Health Sciences Institute', 44),\n",
+       " (u'Department Of Finance', 42),\n",
+       " (u'Minion Solutions Inc.', 35),\n",
+       " (u'Human Capital Asia, Inc', 35),\n",
+       " (u'Linxprovi8', 33)]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(non_unique_company_job_posts.items(), key=lambda (key, value): value, reverse=True)[:10]"
    ]
   },
   {
@@ -234,7 +279,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: BIR has duplicate job posts per job description, which overshadows all other job posts"
+    "Note: BIR has duplicate job posts per job description, which overshadows all other job posts. <br>\n",
+    "It is best to refer to the the graph on \"Unique Job Posts per Company\" for it is more accurate."
    ]
   },
   {
